// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth should render Login by default 1`] = `
<div
  className="auth"
>
  <Login />
  <button
    onClick={[Function]}
  >
    Toggle Display
  </button>
</div>
`;

exports[`Auth should render Register when showLogin is false 1`] = `
<div
  className="auth"
>
  <Signup />
  <button
    onClick={[Function]}
  >
    Toggle Display
  </button>
</div>
`;
